# pico_usb_audio3

./: CMakeLists.txt  cmake4ecl.cmd
src/: usb_sound_card.c
